Fix centering for level 2 on mobile

--- a/_sass/pages/_career_pathways.scss
+++ b/_sass/pages/_career_pathways.scss
@@ -39,6 +39,7 @@
   margin-top: 27px;
   padding-left: 0 !important;
   position: relative;
+  justify-content: space-between;
 
   @media screen and (max-width: 360px) {
     display: none;
@@ -159,11 +160,15 @@
       margin-left: 0;
     }
 
+    &:nth-child(2) {
+      flex: unset;
+    }
+
     .step-counter {
       padding-right: 0;
 
       &:first-child {
-        margin-left: 0;
+        margin-left: 0%;
       }
 
       &:last-child {
